--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p><%= message %></p>
-  </body>
+<head>
+  		<!-- Use the 'title' property to render a page title  -->
+    	<title><%= title %></title>
+</head>
+<body>
+	<!-- Load the static image file  -->
+	<img src="img/logo.png" alt="Logo">
+
+	<!-- Use the 'title' property to render a title element  -->
+	<h1><%= title %></h1>
+</body>
 </html>
